# rocket-telemetry

./: .gitignore  LICENSE.md  README.md  bin2c.c  extra_script.py  index.html  platformio.ini
mock_event_source/: .gitignore  Cargo.toml  Rocket.toml
mock_event_source/src/: main.rs
src/: bin2c.py  browser_info.html  index.html  nyancat.xcf  rocket-telemetry.cpp
