[package]
name = "mock_event_source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
